--- a/src/main/resources/templates/editprofile.html
+++ b/src/main/resources/templates/editprofile.html
@@ -18,6 +18,8 @@
                     </div>
                     <div class="card-body">
                         <form th:action="@{/editprofile}" th:method="put" th:object="${userDto}" enctype="multipart/form-data" >
+                            <div th:if="${param.fileext}" class="my-3">
+                                Can only use image formats</div>
                             <div class="form-group my-3">
                                 <input type="text" th:field="*{username}" class="form-control"/>
                             </div>
@@ -25,7 +27,7 @@
                                 <textarea th:field="*{bio}" class="form-control"/></textarea>
                             </div>
                             <div class="form-group my-3">
-                                <input type="file" th:field="*{profilePicture}" class="form-control-file"/>
+                                <input accept="image/*" type="file" th:field="*{profilePicture}" class="form-control-file"/>
                             </div>
                             <input type="submit" value="Submit Edits" class="btn btn-primary my-3"/>
                         </form>
