--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -50,7 +50,7 @@
             <div th:if="${canEdit}" class="card my-5">
                 <form action="#" th:action="@{/newpost}" th:object="${postDto}" method="post" enctype="multipart/form-data" class="card-body">
                     <div class="form-group my-2">
-                        <textarea th:field="*{content}" class="form-control" required></textarea>
+                        <textarea th:field="*{content}" class="form-control" maxlength="8192" required></textarea>
                     </div>
                     <div class="form-group my-2">
                         <input type="file" th:field="*{files}" class="from-control-file" multiple>
