--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -25,12 +25,17 @@
                             You have been logged out.</div>
                         <div th:if="${param.maxlen}" class="my-3">
                             Email and password must be at most 255 characters long</div>
+                        <div style="display:none;" id="password-fail" class="my-3">
+                            Passwords must be the same</div>
                         <form th:action="@{/register}" method="post" th:object="${user}">
                             <div class="form-group my-3">
-                                <input type="email" th:field="*{email}" placeholder="example@sample.com" class="form-control" maxlength="255"/>
+                                <input type="email" th:field="*{email}" placeholder="example@sample.com" class="form-control" maxlength="255" required/>
                             </div>
                             <div class="form-group my-3">
-                                <input type="password" th:field="*{password}" placeholder="Password" class="form-control" maxlength="255" minlength="8"/>
+                                <input type="password" th:field="*{password}" placeholder="Password" class="form-control" maxlength="255" minlength="8" required/>
+                            </div>
+                            <div class="form-group my-3">
+                                <input type="password" id="password2" placeholder="Password" class="form-control" maxlength="255" minlength="8" required/>
                             </div>
                             <input type="submit" value="Register" class="btn btn-primary my-3"/>
                         </form>
@@ -44,6 +49,22 @@
     </div>
 
 </main>
+<script>
+    function checkPasswords(){
+        let first = document.querySelector("#password");
+        let second = document.querySelector("#password2");
+        if(first.value === second.value){
+            document.querySelector("input[type='submit']").disabled = false;
+            document.querySelector("#password-fail").style.display = "none";
+        }
+        else{
+            document.querySelector("input[type='submit']").disabled = true;
+            document.querySelector("#password-fail").style.display = "block";
+        }
+    }
+    document.querySelector("#password").onchange = checkPasswords;
+    document.querySelector("#password2").onchange = checkPasswords;
+</script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 
 </body>
