Added outline to carousel arrows

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -22,6 +22,7 @@
     }
     .carousel-control-next, .carousel-control-prev, .carousel-caption p{
         color: var(--bs-primary) !important;
+        text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
     }
     .carousel-control-next-icon, .carousel-control-prev-icon {
         background-image: none;
