--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -35,7 +35,7 @@
                                 <input type="password" th:field="*{password}" placeholder="Password" class="form-control" maxlength="255" minlength="8" required/>
                             </div>
                             <div class="form-group my-3">
-                                <input type="password" id="password2" placeholder="Password" class="form-control" maxlength="255" minlength="8" required/>
+                                <input type="password" id="password2" placeholder="Confirm password" class="form-control" maxlength="255" minlength="8" required/>
                             </div>
                             <input type="submit" value="Register" class="btn btn-primary my-3"/>
                         </form>
@@ -49,22 +49,7 @@
     </div>
 
 </main>
-<script>
-    function checkPasswords(){
-        let first = document.querySelector("#password");
-        let second = document.querySelector("#password2");
-        if(first.value === second.value){
-            document.querySelector("input[type='submit']").disabled = false;
-            document.querySelector("#password-fail").style.display = "none";
-        }
-        else{
-            document.querySelector("input[type='submit']").disabled = true;
-            document.querySelector("#password-fail").style.display = "block";
-        }
-    }
-    document.querySelector("#password").onchange = checkPasswords;
-    document.querySelector("#password2").onchange = checkPasswords;
-</script>
+<script th:src="@{/scripts/confirmPasswordValidation.js}"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 
 </body>
