--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -37,7 +37,7 @@
                         <p id="file-errors"></p>
                         <input type="file" th:field="*{files}" class="from-control-file" multiple>
                     </div>
-                    <input type="submit" class="btn btn-primary my-2">
+                    <input value="Submit" type="submit" class="btn btn-primary my-2">
 
                 </form>
 
@@ -56,13 +56,13 @@
                                     <div th:if="${j.index} == 0" class="carousel-item active">
                                         <img th:src="${image}" class="d-block w-100">
                                         <div class="carousel-caption d-none d-md-block">
-                                            <p th:text="${j.index} + '/' + ${images[__${i.index}__].size}"></p>
+                                            <p th:text="${j.index + 1} + '/' + ${images[__${i.index}__].size}"></p>
                                         </div>
                                     </div>
                                     <div th:if="${j.index} != 0" class="carousel-item">
                                         <img th:src="${image}" class="d-block w-100">
                                         <div class="carousel-caption d-none d-md-block">
-                                            <p th:text="${j.index} + '/' + ${images[__${i.index}__].size}"></p>
+                                            <p th:text="${j.index + 1} + '/' + ${images[__${i.index}__].size}"></p>
                                         </div>
                                     </div>
                                 </th:block>
