Added the ability to change passwords

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -23,6 +23,7 @@
                     <span th:text="${user.bio}"></span>
                     <div th:if="${canEdit}">
                         <a th:href="@{/editprofile}" class="btn btn-primary m-3">Edit profile</a>
+                        <a th:href="@{/editpassword}" class="btn btn-primary m-3">Edit password</a>
 
                     </div>
 
