Added the ability to delete posts

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org">
+<html lang="en" xmlns:th="https://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -82,6 +82,12 @@
                         </div>
                         <small th:text="${T(java.time.format.DateTimeFormatter).ofPattern('dd MMM, yyyy HH:mm').format(post.date)}" class="text-body-secondary"></small>
 
+                    </div>
+                    <div>
+                        <form th:if="${canEdit}" action="#" th:action="@{/deletepost} + '/' + ${post.id}" th:method="delete" >
+                            <input type="submit" class="btn btn-danger m-3" value="Delete post">
+
+                        </form>
                     </div>
                 </div>
             </div>
