--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -29,6 +29,11 @@
                     </th:block>
 
                 </ul>
+                <form class="d-flex" role="search" th:action="@{/search/users}" th:method="get">
+                    <input name="username" class="form-control me-2" type="search" placeholder="Search users" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+
             </div>
         </div>
     </nav>
